[project]
name = "cartesia-ai-small-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartesia>=2.0.17",
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "numpy>=2.4.0",
    "pydub>=0.25.1",
    "sounddevice>=0.5.3",
]
